# Project_Forge

./: .dockerignore  .env.example  .gitignore  DATASET-SOURCE-UPDATE.md  Dockerfile  MOCK-RUN-IMPLEMENTATION.md  PROJECT-STATUS.md  QUICKSTART.md  README.md  RUN-ME-FIRST.md  STEERING-DOCS-SUMMARY.md  STEERING-REINFORCEMENT-SUMMARY.md  docker-compose.yml  inference.py  package-lock.json  project plan.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup_instructions.md
.kiro/: OVERVIEW.md  QUICK-REFERENCE.md  README.md
.kiro/specs/model-aware-preprocessing-pipeline/: design.md  requirements.md  tasks.md
.kiro/steering/: CRITICAL-RULES.md  architecture.md  coding-style.md  docker-patterns.md  error-handling.md  gemini-prompts.md  lessons-learned.md  security.md  stage-workflow.md  testing.md
Forge/: .dockerignore  .env.example  .gitignore  GUIDE.md  PLAN_README.md  PRD.md  README.md  SETUP.md  bootstrap.py  forge.yaml  preprocess_data.py  preprocess_generated.py  pyproject.toml  test_data.csv
Forge/docker/: Dockerfile.ada  Dockerfile.ampere  Dockerfile.base  Dockerfile.blackwell  Dockerfile.hopper  README.md  docker-compose.yml  forge-docker.bat  forge-docker.sh
Forge/forge/: __init__.py  __main__.py  guideline.json
Forge/forge/anvil/: __init__.py  data.py  hyperparams.py  telemetry.py  trainer.py
Forge/forge/brain/: __init__.py  client.py  prompts.py  tools.py
Forge/forge/cli/: __init__.py  cleanup_cmd.py  container_cmd.py  docker_cmd.py  export_cmd.py  inference_cmd.py  init_cmd.py  login_cmd.py  main.py  plan_cmd.py  prepare_cmd.py  prepare_cmd_v2.py  setup_cmd.py  status_cmd.py  study_cmd.py  test_cmd.py  train_cmd.py
Forge/forge/core/: __init__.py  config.py  config_v2.py  container_manager.py  docker_preprocessor.py  hardware.py  models.py  security.py  templates.py
Forge/forge/ui/: __init__.py  console.py  panels.py  progress.py
Forge/tests/: test_cli.py  test_config_v2.py  test_templates.py
Google_Deepming/gemini-data-processor/: README.md  design.md  pyproject.toml  requirements.md  tasks.md
Google_Deepming/gemini-data-processor/.gemini-processor/: .gemini-processor.json
Google_Deepming/gemini-data-processor/src/gemini_data_processor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Google_Deepming/gemini-data-processor/src/gemini_processor/: __init__.py
Google_Deepming/gemini-data-processor/src/gemini_processor/cli/: __init__.py  main.py
Google_Deepming/gemini-data-processor/src/gemini_processor/config/: __init__.py  keyring_manager.py  loader.py
Google_Deepming/gemini-data-processor/src/gemini_processor/core/: __init__.py  data_analyzer.py  engine.py  script_coordinator.py
Google_Deepming/gemini-data-processor/src/gemini_processor/docker/: __init__.py  container.py  manager.py
Google_Deepming/gemini-data-processor/src/gemini_processor/gemini/: __init__.py  client.py  prompts.py
Google_Deepming/gemini-data-processor/src/gemini_processor/models/: __init__.py  config.py  data.py  enums.py
Google_Deepming/gemini-data-processor/src/gemini_processor/security/: __init__.py  manager.py
Google_Deepming/gemini-data-processor/src/gemini_processor/storage/: __init__.py  session.py  storage.py
docs/: API-KEY-SETUP.md  REPO-STRUCTURE.md  SECURITY.md
docs/development/: API-KEY-FEATURE-SUMMARY.md  ENVIRONMENT-BUILD-IMPLEMENTATION.md  FIX-SUMMARY.md  README.md  TORCHVISION-DATASET-EXAMPLE.md
examples/mnist-feedforward/: Dockerfile  README.md  conversation.txt  data-requirements.md  imp_points.md  state.json  steering-doc.yaml
examples/mnist-feedforward/workspace/: config.yaml  dataset.py  mock_runner.py  model.py  requirements.txt  train.py
nnb/: __init__.py  cli.py
nnb/docker_runtime/: __init__.py  container.py
nnb/gemini_brain/: __init__.py  client.py
nnb/models/: project_spec.py
nnb/orchestrator/: __init__.py  project.py  state.py
nnb/stages/: __init__.py  stage_01_conversation.py  stage_02_scoping.py  stage_03_data_requirements.py  stage_04_data_validation.py  stage_05_environment.py  stage_06_code_generation.py  stage_07_training.py
nnb/utils/: api_key_manager.py  id_generator.py  logging.py  steering_loader.py
tests/: __init__.py  test_api_key_manager.py  test_project.py  test_state_machine.py
